--- a/readme
+++ b/readme
@@ -76,4 +76,20 @@ Compatível com dispositivos móveis e telas menores graças ao uso de media que
 Este projeto está sob a licença MIT. Veja o arquivo [LICENSE](LICENSE) para mais detalhes.
 
 ---
+Claro, Alessandra!
+Aqui está um **trecho pronto** para você colocar no **README** do seu projeto *pesquisa-filmes* — basta copiar e colar:
+
+---
+
+## 👤 Autora
+
+**Alessandra Cardozo dos Santos**
+
+* 🌐 **LinkedIn:** [linkedin.com/in/alessandra-cardozo-dos-santos-pcd-634529158](https://www.linkedin.com/in/alessandra-cardozo-dos-santos-pcd-634529158)
+* 💻 **GitHub:** [github.com/alessandra-cardozo](https://github.com/alessandra-cardozo)
+
+---
+
+
+
 
