--- a/readme
+++ b/readme
@@ -83,13 +83,12 @@ Aqui está um **trecho pronto** para você colocar no **README** do seu projeto 
 
 ## 👤 Autora
 
-**Alessandra Cardozo dos Santos**
+👤 Autora
 
-* 🌐 **LinkedIn:** [linkedin.com/in/alessandra-cardozo-dos-santos-pcd-634529158](https://www.linkedin.com/in/alessandra-cardozo-dos-santos-pcd-634529158)
-* 💻 **GitHub:** [github.com/alessandra-cardozo](https://github.com/alessandra-cardozo)
+Alessandra Cardozo dos Santos
 
----
+🌐 LinkedIn: linkedin.com/in/alessandra-cardozo-dos-santos-pcd-634529158
 
-
+💻 GitHub: github.com/alessandra-cardozo
 
 
