--- a/readme
+++ b/readme
@@ -1,94 +1,124 @@
+Aqui está um **README COMPLETO**, pronto para colar no GitHub **com os links 100% clicáveis**.
+Use exatamente este markdown — já está corrigido para evitar o erro do GitHub.
 
 ---
 
-# 🎬 Catálogo de Filmes
+# 🎬 Pesquisa de Filmes
 
-Um catálogo interativo de filmes desenvolvido com HTML, CSS e JavaScript, que consome dados da API do The Movie Database (TMDb) e oferece uma experiência dinâmica e amigável de descoberta e busca por filmes.
+Projeto desenvolvido para pesquisar filmes usando API externa, interface simples e totalmente responsiva.
 
-## ✨ Funcionalidades
+---
 
-- 🔍 Busca por filmes através da API TMDb
-- 🌟 Listagem dos filmes populares filtrados para classificação até 12 anos
-- 💡 Modo claro/escuro com botão de alternância
-- 🎥 Exibição de sinopse e trailer (via YouTube) diretamente no card do filme
-- 💖 Sistema de favoritos com armazenamento local (localStorage)
-- 📄 Paginação de resultados de forma intuitiva
+## 📌 Funcionalidades
 
-## 🛠️ Tecnologias Utilizadas
+* 🔎 Pesquisa de filmes por título
+* 🎞️ Exibição de cartazes, sinopses e notas
+* 📱 Layout responsivo
+* ⚡ Carregamento rápido
+* 🎨 Interface limpa e organizada
 
-- HTML5
-- CSS3 (com responsividade)
-- JavaScript (ES6+)
-- API do TMDb (https://www.themoviedb.org)
+---
 
-## 🚀 Como Executar
+## 🚀 Tecnologias Utilizadas
 
-1. Clone o repositório:
-   ```bash
-   git clone https://github.com/seu-usuario/catalogo-filmes.git
-   ```
-2. Navegue até o diretório:
-   ```bash
-   cd catalogo-filmes
-   ```
-3. Abra o arquivo `index.html` no seu navegador:
-   ```bash
-   start index.html
-   ```
+* **HTML5**
+* **CSS3**
+* **JavaScript**
+* **API de Filmes** (ex: OMDb API, TheMovieDB ou outra que você usou)
 
-> 💡 Nenhuma instalação adicional é necessária. Basta abrir em um navegador moderno!
+---
 
-## 📦 Estrutura de Arquivos
+## 📂 Estrutura do Projeto
 
-```plaintext
-📁 catalogo-filmes/
-├── index.html
-├── style.css
-├── script.js
+```
+/pesquisa-filmes
+│── index.html
+│── style.css
+│── script.js
+│── assets/
+│     └── imagens, ícones etc.
+│── README.md
 ```
 
-## 🧠 Lógica e Comportamento
+---
 
-- `script.js`:
-  - Usa `fetch` para consumir dados da TMDb
-  - Filtra resultados adultos e exibe classificação
-  - Adiciona/remover favoritos via `localStorage`
-  - Atualiza a visualização automaticamente em pesquisa ou navegação por páginas
+## ▶️ Como Rodar o Projeto
 
-## 🌙 Tema Escuro
+1. Faça o clone do repositório:
 
-Clique no ícone 🌙 no cabeçalho para alternar entre os modos claro e escuro. O estilo é aplicado dinamicamente via JavaScript e classes CSS.
+   ```bash
+   git clone https://github.com/alessandra-cardozo/pesquisa-filmes
+   ```
 
-## 💾 Favoritos
+2. Entre na pasta:
 
-Os filmes marcados como favoritos são armazenados no `localStorage` do navegador, permitindo que o usuário retorne posteriormente e veja suas escolhas.
+   ```bash
+   cd pesquisa-filmes
+   ```
 
-## 📱 Responsivo
-
-Compatível com dispositivos móveis e telas menores graças ao uso de media queries e layout flexível.
-
-## 📷 Preview
-
-*Insira aqui uma imagem ou gif demonstrando a aplicação, se desejar.*
-
-## 📝 Licença
-
-Este projeto está sob a licença MIT. Veja o arquivo [LICENSE](LICENSE) para mais detalhes.
+3. Abra o arquivo **index.html** no navegador.
+   Você já pode testar tudo localmente — não precisa de servidor.
 
 ---
-Claro, Alessandra!
-Aqui está um **trecho pronto** para você colocar no **README** do seu projeto *pesquisa-filmes* — basta copiar e colar:
+
+## 🧩 Pré-requisitos (se usar API com chave)
+
+Algumas APIs exigem **chave de acesso**.
+Se esse projeto usa uma, coloque sua chave no arquivo `script.js` (ou conforme sua organização).
+
+> ⚠️ **Nunca exponha sua API Key pública.**
+> Use variáveis de ambiente ou arquivo `.env` quando possível.
+
+---
+
+## 🐛 Problemas conhecidos
+
+* Se a API limitar requisições gratuitas, a busca pode falhar.
+* Verifique se sua chave de API está correta.
 
 ---
 
 ## 👤 Autora
 
-👤 Autora
+**Alessandra Cardozo dos Santos**
 
-Alessandra Cardozo dos Santos
+🔗 **LinkedIn:**
+👉 [https://www.linkedin.com/in/alessandra-cardozo-dos-santos-pcd-634529158](https://www.linkedin.com/in/alessandra-cardozo-dos-santos-pcd-634529158)
 
-🌐 LinkedIn: linkedin.com/in/alessandra-cardozo-dos-santos-pcd-634529158
+💻 **GitHub:**
+👉 [https://github.com/alessandra-cardozo](https://github.com/alessandra-cardozo)
 
-💻 GitHub: github.com/alessandra-cardozo
+*(Esses links estão totalmente clicáveis no GitHub.)*
+
+---
+
+## ⭐ Contribuição
+
+Se desejar contribuir:
+
+```bash
+1. Faça um fork do projeto
+2. Crie uma branch: git checkout -b minha-feature
+3. Commit: git commit -m "Minha feature"
+4. Push: git push origin minha-feature
+5. Abra um Pull Request
+```
+
+---
+
+## 📝 Licença
+
+Este projeto é de uso livre para estudo e prática.
+
+---
+
+Se quiser, posso **personalizar ainda mais** o README com:
+
+✔ Badges (linguagens, status, licença, versão)
+✔ Banner superior com imagem do projeto
+✔ GIF de demonstração
+✔ seção de agradecimentos
+✔ instruções de deploy
+
 
 
