Update README with complete project details

--- a/readme
+++ b/readme
@@ -80,15 +80,15 @@ Se esse projeto usa uma, coloque sua chave no arquivo `script.js` (ou conforme s
 
 ## 👤 Autora
 
-**Alessandra Cardozo dos Santos**
+👤 Autora
 
-🔗 **LinkedIn:**
-👉 [https://www.linkedin.com/in/alessandra-cardozo-dos-santos-pcd-634529158](https://www.linkedin.com/in/alessandra-cardozo-dos-santos-pcd-634529158)
+Alessandra Cardozo dos Santos
 
-💻 **GitHub:**
-👉 [https://github.com/alessandra-cardozo](https://github.com/alessandra-cardozo)
+🔗 LinkedIn:
+👉 https://www.linkedin.com/in/alessandra-cardozo-dos-santos-pcd-634529158
 
-*(Esses links estão totalmente clicáveis no GitHub.)*
+💻 GitHub:
+👉 https://github.com/alessandra-cardozo
 
 ---
 
@@ -112,13 +112,7 @@ Este projeto é de uso livre para estudo e prática.
 
 ---
 
-Se quiser, posso **personalizar ainda mais** o README com:
 
-✔ Badges (linguagens, status, licença, versão)
-✔ Banner superior com imagem do projeto
-✔ GIF de demonstração
-✔ seção de agradecimentos
-✔ instruções de deploy
 
 
 
