--- a/readme
+++ b/readme
@@ -1,36 +1,29 @@
-Aqui está um **README COMPLETO**, pronto para colar no GitHub **com os links 100% clicáveis**.
-Use exatamente este markdown — já está corrigido para evitar o erro do GitHub.
-
----
-
-# 🎬 Pesquisa de Filmes
+🎬 Pesquisa de Filmes
 
 Projeto desenvolvido para pesquisar filmes usando API externa, interface simples e totalmente responsiva.
 
----
+📌 Funcionalidades
 
-## 📌 Funcionalidades
+🔎 Pesquisa de filmes por título
 
-* 🔎 Pesquisa de filmes por título
-* 🎞️ Exibição de cartazes, sinopses e notas
-* 📱 Layout responsivo
-* ⚡ Carregamento rápido
-* 🎨 Interface limpa e organizada
+🎞️ Exibição de cartazes, sinopses e notas
 
----
+📱 Layout responsivo
 
-## 🚀 Tecnologias Utilizadas
+⚡ Carregamento rápido
 
-* **HTML5**
-* **CSS3**
-* **JavaScript**
-* **API de Filmes** (ex: OMDb API, TheMovieDB ou outra que você usou)
+🎨 Interface limpa e organizada
 
----
+🚀 Tecnologias Utilizadas
 
-## 📂 Estrutura do Projeto
+HTML5
 
-```
+CSS3
+
+JavaScript
+
+API de Filmes (ex: OMDb API, TheMovieDB ou outra que você usou)
+
 /pesquisa-filmes
 │── index.html
 │── style.css
@@ -38,47 +31,35 @@ Projeto desenvolvido para pesquisar filmes usando API externa, interface simples
 │── assets/
 │     └── imagens, ícones etc.
 │── README.md
-```
 
----
+▶️ Como Rodar o Projeto
 
-## ▶️ Como Rodar o Projeto
+Faça o clone do repositório:
 
-1. Faça o clone do repositório:
+git clone https://github.com/alessandra-cardozo/pesquisa-filmes
 
-   ```bash
-   git clone https://github.com/alessandra-cardozo/pesquisa-filmes
-   ```
 
-2. Entre na pasta:
+Entre na pasta:
 
-   ```bash
-   cd pesquisa-filmes
-   ```
+cd pesquisa-filmes
 
-3. Abra o arquivo **index.html** no navegador.
-   Você já pode testar tudo localmente — não precisa de servidor.
 
----
+Abra o arquivo index.html no navegador.
+Você já pode testar tudo localmente — não precisa de servidor.
 
-## 🧩 Pré-requisitos (se usar API com chave)
+🧩 Pré-requisitos (se usar API com chave)
 
-Algumas APIs exigem **chave de acesso**.
-Se esse projeto usa uma, coloque sua chave no arquivo `script.js` (ou conforme sua organização).
+Algumas APIs exigem chave de acesso.
+Se esse projeto usa uma, coloque sua chave no arquivo script.js (ou conforme sua organização).
 
-> ⚠️ **Nunca exponha sua API Key pública.**
-> Use variáveis de ambiente ou arquivo `.env` quando possível.
+⚠️ Nunca exponha sua API Key pública.
+Use variáveis de ambiente ou arquivo .env quando possível.
 
----
+🐛 Problemas conhecidos
 
-## 🐛 Problemas conhecidos
+Se a API limitar requisições gratuitas, a busca pode falhar.
 
-* Se a API limitar requisições gratuitas, a busca pode falhar.
-* Verifique se sua chave de API está correta.
-
----
-
-## 👤 Autora
+Verifique se sua chave de API está correta.
 
 👤 Autora
 
@@ -89,30 +70,5 @@ Alessandra Cardozo dos Santos
 
 💻 GitHub:
 👉 https://github.com/alessandra-cardozo
-
----
-
-## ⭐ Contribuição
-
-Se desejar contribuir:
-
-```bash
-1. Faça um fork do projeto
-2. Crie uma branch: git checkout -b minha-feature
-3. Commit: git commit -m "Minha feature"
-4. Push: git push origin minha-feature
-5. Abra um Pull Request
-```
-
----
-
-## 📝 Licença
-
-Este projeto é de uso livre para estudo e prática.
-
----
-
-
-
 
 
